<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/create_event_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/default_gap"
                    android:layout_marginVertical="@dimen/text_space_2"
                    android:text="@string/event_name"
                    android:textColor="@color/darkgrey"
                    android:textSize="@dimen/default_heading_size" />

                <EditText
                    android:id="@+id/edit_event_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/default_gap"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/create_event_venue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/default_gap"
                    android:layout_marginVertical="@dimen/default_gap"
                    android:text="@string/venue"
                    android:textColor="@color/darkgrey"
                    android:textSize="@dimen/default_heading_size" />

                <EditText
                    android:id="@+id/edit_text_venue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/default_gap"
                    android:layout_marginVertical="@dimen/default_gap"
                    android:text="@string/location"
                    android:textColor="@color/darkgrey"
                    android:textSize="@dimen/default_heading_size" />

                <Button
                    android:id="@+id/add_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_location"
                    android:textColor="@color/darkgrey"
                    android:textSize="@dimen/default_text_size" />
            </LinearLayout>

            <TextView
                android:id="@+id/list_contacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_gap"
                android:layout_marginVertical="@dimen/text_space_2"
                android:text="@string/list_of_contacts"
                android:textColor="@color/darkgrey"
                android:textSize="@dimen/default_heading_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/add_contacts_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_contacts"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/remove_contact_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/remove_contact"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/list_of_movies_in_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_gap"
                android:layout_marginVertical="@dimen/text_space_2"
                android:text="@string/list_of_movies"
                android:textColor="@color/darkgrey"
                android:textSize="@dimen/default_heading_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/add_movie_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_movie"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/delete_movie_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_movie"
                    android:textSize="@dimen/default_text_size" />
            </LinearLayout>

            <TextView
                android:id="@+id/date_of_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_gap"
                android:layout_marginVertical="@dimen/text_space_2"
                android:text="@string/start_date_none"
                android:textColor="@color/darkgrey"
                android:textSize="@dimen/default_heading_size" />

            <Button
                android:id="@+id/add_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_start_date"
                android:textSize="@dimen/default_text_size" />

            <TextView
                android:id="@+id/date_of_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_gap"
                android:layout_marginVertical="@dimen/text_space_2"
                android:text="@string/end_date_none"
                android:textColor="@color/darkgrey"
                android:textSize="@dimen/default_heading_size" />

            <Button
                android:id="@+id/add_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_end_date"
                android:textSize="@dimen/default_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/default_gap"
                    android:layout_marginVertical="@dimen/default_gap"
                    android:text="@string/start_time_example"
                    android:textColor="@color/darkgrey"
                    android:textSize="@dimen/default_heading_size" />

                <EditText
                    android:id="@+id/edit_text_start_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="time"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/default_gap"
                    android:layout_marginVertical="@dimen/text_space_2"
                    android:text="@string/end_time_example"
                    android:textColor="@color/darkgrey"
                    android:textSize="@dimen/default_heading_size" />

                <EditText
                    android:id="@+id/edit_text_end_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/default_gap"
                    android:ems="10"
                    android:inputType="time"
                    android:text=""
                    android:textSize="@dimen/default_text_size" />
            </LinearLayout>

            <Button
                android:id="@+id/event_done_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textSize="@dimen/default_text_size" />

            <Button
                android:id="@+id/remove_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remove_event"
                android:textSize="@dimen/default_text_size" />


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>