<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_notification_threshold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_gap"
            android:layout_marginVertical="@dimen/default_gap"
            android:text="@string/notification_threshold"
            android:textColor="@color/darkgrey"
            android:textSize="@dimen/default_heading_size" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/text_remind_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_gap"
            android:layout_marginVertical="@dimen/default_gap"
            android:text="@string/remind_again_duration"
            android:textColor="@color/darkgrey"
            android:textSize="@dimen/default_heading_size" />

        <EditText
            android:id="@+id/remind_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/text_notification_period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_gap"
            android:layout_marginVertical="@dimen/default_gap"
            android:text="@string/notification_period"
            android:textColor="@color/darkgrey"
            android:textSize="@dimen/default_heading_size" />

        <EditText
            android:id="@+id/notification_period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

</RelativeLayout>